# toad

./: .gitignore  CHANGELOG.md  Makefile  README.md  agent.jsonl  notes.md  pyproject.toml  replay.jsonl
.github/ISSUE_TEMPLATE/: pull_request_template.md
src/toad/: about.py  agent_schema.py  ansi.py  app.py  cli.py  conversation_markdown.py  danger.py  db.py  directory.py  directory_watcher.py  jsonrpc.py  main_screen.py  messages.py  path_filter.py  settings_schema.py  shell.py  shell_read.py  toad.tcss
src/toad/acp/: agent.py  messages.py  prompt.py  protocol.py
src/toad/ansi/: _ansi.py  _stream_parser.py
src/toad/data/agents/: claude.com.toml  inference.huggingface.io.toml  kimi.com.toml  openhands.dev.toml
src/toad/screens/: main.py  session_resume_modal.py  settings.py  store.py  store.tcss
src/toad/visuals/: columns.py
src/toad/widgets/: acp_content.py  agent_response.py  ansi_log.py  command_pane.py  condensed_path.py  conversation.py  diff_view.py  grid_select.py  highlighted_textarea.py  path_search.py  project_directory_tree.py  prompt.py  question.py  slash_complete.py  terminal.py  throbber.py  user_input.py
