[project]
name = "toad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=3.5.0",
    "textual-dev>=1.7.0",
    "textual-speedups>=0.2.0",
    "click>=8.2.1",
    "gitpython>=3.1.44",
    "llm>=0.26",
]

[tool.uv.workspace]
members = [
    "toad",
]

[project.scripts]
toad = "toad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
